--- a/src/scss/blocks/ui.scss
+++ b/src/scss/blocks/ui.scss
@@ -283,6 +283,10 @@
   background-color: #07f;
 }
 
+.meta-vue {
+  background-color: #42b983;
+}
+
 .meta-css {
   background-color: rgb(3, 155, 229);
 }
