--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,49 +1,49 @@
 * {
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-scroll-behavior: smooth;
-user-select: none;
+  scroll-behavior: smooth;
+  user-select: none;
 }
 
 html,
 body {
-position: relative;
-padding: 0;
-margin: 0;
-width: 100%;
-min-height: 100vh;
-color: var(--black);
-line-height: 1;
-font-size: 16px;
-font-weight: 400;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  min-height: 100vh;
+  color: var(--black);
+  line-height: 1;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 body.hidden {
-overflow: hidden;
+  overflow: hidden;
 }
 
 body::before {
-content: "";
-display: block;
-width: 1px;
-height: 0px;
-background-color: transparent;
+  content: "";
+  display: block;
+  width: 1px;
+  height: 0px;
+  background-color: transparent;
 }
 
 main {
-min-height: 80vh;
+  min-height: 80vh;
 }
 
 input,
 textarea {
-font-size: 16px;
-line-height: 1.5;
-resize: vertical;
--webkit-appearance: none;
+  font-size: 16px;
+  line-height: 1.5;
+  resize: vertical;
+  -webkit-appearance: none;
 }
 
 h1,
@@ -52,141 +52,144 @@ h3,
 h4,
 h5,
 h6 {
-margin: 0;
+  margin: 0;
 }
 
 a {
   user-select: auto;
 }
 
-ul, ol, li {
-margin: 0;
-padding: 0;
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 p {
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-display: block;
-max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 
 img[lazy="loading"] {
-background: url("~@/assets/img/loading/loading.gif") top left / contain
-    no-repeat,
+  background: url("~@/assets/img/loading/loading.gif") top left / contain
+      no-repeat,
     linear-gradient(0deg, #343434, #343434);
 }
 img[lazy="error"] {
-background: url("~@/assets/img/error/404.jpg") top left / cover no-repeat,
+  background: url("~@/assets/img/error/404.jpg") top left / cover no-repeat,
     linear-gradient(0deg, #f72727, #f72727);
 }
 
 .big-container {
-max-width: 1470px;
-padding: 0 15px;
-margin: auto;
+  max-width: 1470px;
+  padding: 0 15px;
+  margin: auto;
 }
 
 .container {
-max-width: 1170px;
-padding: 0 15px;
-margin: auto;
+  max-width: 1170px;
+  padding: 0 15px;
+  margin: auto;
 }
 
 .display-block {
-display: block;
+  display: block;
 }
 
 .relative {
-position: relative;
+  position: relative;
 }
 
 img {
-pointer-events: none;
+  pointer-events: none;
 }
 
 ::-webkit-scrollbar-button {
-background-repeat: no-repeat;
-width: 5px;
-height: 0px;
+  background-repeat: no-repeat;
+  width: 5px;
+  height: 0px;
 }
 
 ::-webkit-scrollbar-track {
-background-color: #242424;
+  background-color: #242424;
 }
 
 ::-webkit-scrollbar-thumb {
--webkit-border-radius: 0px;
-border-radius: 0px;
-background: var(--redCyber50);
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+  background: var(--redCyber50);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-background: var(--redCyber);
+  background: var(--redCyber);
 }
 
 ::-webkit-resizer {
-background-repeat: no-repeat;
-width: 10px;
-height: 0px;
+  background-repeat: no-repeat;
+  width: 10px;
+  height: 0px;
 }
 
 ::-webkit-scrollbar {
-width: 10px;
+  width: 10px;
 }
 
 @media (max-width: 1170px) {
-    .animated {
-      animation: none;
-    }
-  
-    .wow {
-      animation: none;
-    }
+  .animated {
+    animation: none;
   }
-  
-  .page {
-    position: relative;
-    overflow: hidden;
+
+  .wow {
+    animation: none;
   }
-  
-  .page::before {
-    position: fixed;
-    content: "";
-    top: -50px;
-    right: 0;
-    height: 50px;
-    width: 100%;
-    box-shadow: 0px 10px 15px var(--black);
-    z-index: 1000;
-  }
-  
-  .page::after {
-    position: fixed;
-    content: "";
-    bottom: -50px;
-    left: 0;
-    height: 50px;
-    width: 100%;
-    box-shadow: 0px -10px 15px var(--black);
-    z-index: 1000;
-  }
-  
-  .white-color {
-    background: var(--white);
-  }
-  
-  .display-none {
-    display: none;
-  }
-  
-  .neon span {
-    animation: neon linear infinite 3s;
-  }
-  
-  .slide-left-enter-active {
-    animation: slideInLeft 1s linear;
-  }
+}
+
+.page {
+  position: relative;
+  overflow: hidden;
+}
+
+.page::before {
+  position: fixed;
+  content: "";
+  top: -50px;
+  right: 0;
+  height: 50px;
+  width: 100%;
+  box-shadow: 0px 10px 15px var(--black);
+  z-index: 1000;
+}
+
+.page::after {
+  position: fixed;
+  content: "";
+  bottom: -50px;
+  left: 0;
+  height: 50px;
+  width: 100%;
+  box-shadow: 0px -10px 15px var(--black);
+  z-index: 1000;
+}
+
+.white-color {
+  background: var(--white);
+}
+
+.display-none {
+  display: none;
+}
+
+.neon span {
+  animation: neon linear infinite 3s;
+}
+
+.slide-left-enter-active {
+  animation: slideInLeft 1s linear;
+}
